Added more posts to index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,85 @@
                         </footer>
                     </article>
                 </div>
+                <div class="col-md-6">
+                    <article>
+                        <header>
+                            <h2>Why Choosing the Right Storage Infrastructure.</h2>
+                        </header>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.
+                        </p>
+                        <small class="author">Steve Fowler</small>
+                        <footer>
+                            <div class="pull-right">
+                                <a href="viewpost.html" class="btn btn-default btn-xs">Read more &raquo;</a>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+                <div class="col-md-6">
+                    <article>
+                        <header>
+                            <h2>Why Choosing the Right Storage Infrastructure.</h2>
+                        </header>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.
+                        </p>
+                        <small class="author">Steve Fowler</small>
+                        <footer>
+                            <div class="pull-right">
+                                <a href="viewpost.html" class="btn btn-default btn-xs">Read more &raquo;</a>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+                <div class="col-md-6">
+                    <article>
+                        <header>
+                            <h2>Why Choosing the Right Storage Infrastructure.</h2>
+                        </header>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, commodi cum debitis deleniti,
+                            dolores hic inventore minus molestias nesciunt, nisi rem ut voluptatem. Error officia, ratione.
+                            Quo quod sequi tempora.
+                        </p>
+                        <small class="author">Steve Fowler</small>
+                        <footer>
+                            <div class="pull-right">
+                                <a href="viewpost.html" class="btn btn-default btn-xs">Read more &raquo;</a>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+
             </div>
         </div>
     </main>
